@@ -5737,6 +5737,9 @@ SEXP attribute_hidden R_getCurrentSrcref()
 
 static Rboolean maybeClosureWrapper(SEXP expr)
 {
+    if (TYPEOF(expr) != LANGSXP)
+	return FALSE;
+
     SEXP sym = CAR(expr);
 
     if (!(sym == R_DotInternalSym || sym == R_DotExternalSym ||
@@ -5751,6 +5754,9 @@ static Rboolean maybeClosureWrapper(SEXP expr)
 
 static Rboolean maybeAssignmentCall(SEXP expr)
 {
+    if (TYPEOF(expr) != LANGSXP)
+	return FALSE;
+
     if (TYPEOF(CAR(expr)) != SYMSXP)
 	return FALSE;
     const char *name = CHAR(PRINTNAME(CAR(expr)));
@@ -5762,6 +5768,9 @@ static Rboolean maybeAssignmentCall(SEXP expr)
    a builtin or special (does not search the environment!). */
 static Rboolean maybePrimitiveCall(SEXP expr)
 {
+    if (TYPEOF(expr) != LANGSXP)
+	return FALSE;
+
     if (TYPEOF(CAR(expr)) == SYMSXP) {
 	SEXP value = SYMVALUE(CAR(expr));
 	if (TYPEOF(value) == PROMSXP)
